# OverlayCrafter

./: .gitignore  CMakeLists.txt
src/: App.cpp  App.h  Button.cpp  Button.h  ColorScheme.cpp  ColorScheme.h  ResourceManager.h  WhiteTexture.h  color_utils.cpp  color_utils.h  image_loader.cpp  image_loader.h  main.cpp
src/main/: Common.h  main.cpp
src/main/core/: App.cpp  App.h  AppUI.cpp  AppUI.h  AppWindow.cpp  AppWindow.h  FileDropHandler.cpp  OldWindow.h  ResourcePaths.h
src/main/math/: Uint.h  Vector2.h
src/main/oldsfml/: App.cpp  App.h  AppUI.cpp  AppUI.h  ButtonBar.cpp  ButtonBar.h  FileDropHandler.h  OldButton.cpp  OldButton.h  OldWindow.cpp  OldWindow.h  Theme.h
src/main/platform/windows/: DragAndDropHandler.cpp  DragAndDropHandler.h  NativeEventHandler.cpp  NativeEventHandler.h  NativeGLContext.cpp  NativeGLContext.h  NativeWindow.cpp  NativeWindow.h
src/main/ui/: AppUI.cpp  AppUI.h  Button.cpp  Button.h  ButtonBar.cpp  ButtonBar.h  DrawTarget.h  Drawable.h  MenuBar.cpp  MenuBar.h  RectanglePrimitive.cpp  RectanglePrimitive.h  Text.cpp  Text.h  Toolbar.cpp  Toolbar.h
src/main/util/: Color.cpp  Color.h  FileDialog.cpp  Logger.h  ProjectFile.cpp  ProjectFile.h
src/main/utils/: Color.cpp  Color.h  FileDialog.h  HexColorParser.h  JarReader.cpp  JarReader.h  Logger.h  ProjectFile.cpp  TextureMaker.h  Theme.h  WhiteTexture.h
